--- a/LeetCode/1891-1900/1893. 检查是否区域内所有整数都被覆盖（简单）.md
+++ b/LeetCode/1891-1900/1893. 检查是否区域内所有整数都被覆盖（简单）.md
@@ -6,11 +6,11 @@ Tag : 「模拟」、「树状数组」、「线段树」
 
 
 
-给你一个二维整数数组 ranges 和两个整数 left 和 right 。每个 ranges[i] = [starti, endi] 表示一个从 starti 到 endi 的 闭区间 。
+给你一个二维整数数组 `ranges` 和两个整数 `left` 和 `right`。每个 $ranges[i] = [start_i, end_i]$ 表示一个从 $start_i$ 到 $end_i$ 的 闭区间 。
 
-如果闭区间 [left, right] 内每个整数都被 ranges 中 至少一个 区间覆盖，那么请你返回 true ，否则返回 false 。
+如果闭区间 $[left, right]$ 内每个整数都被 `ranges` 中 至少一个 区间覆盖，那么请你返回 `true`，否则返回 `false`。
 
-已知区间 ranges[i] = [starti, endi] ，如果整数 x 满足 starti <= x <= endi ，那么我们称整数x 被覆盖了。
+已知区间 $ranges[i] = [start_i, end_i]$，如果整数 `x` 满足 $start_i <= x <= end_i$，那么我们称整数 `x` 被覆盖了。
 
 示例 1：
 ```
@@ -33,9 +33,9 @@ Tag : 「模拟」、「树状数组」、「线段树」
 ```
 
 提示：
-* 1 <= ranges.length <= 50
-* 1 <= starti <= endi <= 50
-* 1 <= left <= right <= 50
+* $1 <= ranges.length <= 50$
+* $1 <= start_i <= end_i <= 50$
+* $1 <= left <= right <= 50$
 
 ---
 
