✨feat: Add 1012 & Modify 357

--- a/LeetCode/1011-1020/1012. 至少有 1 位重复的数字（困难）.md
+++ b/LeetCode/1011-1020/1012. 至少有 1 位重复的数字（困难）.md
@@ -1,65 +1,50 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[357. 统计各位数字都不同的数字个数](https://leetcode-cn.com/problems/count-numbers-with-unique-digits/solution/by-ac_oier-6tfl/)** ，难度为 **中等**。
+这是 LeetCode 上的 **[1012. 至少有 1 位重复的数字](https://leetcode-cn.com/problems/numbers-with-repeated-digits/solution/by-ac_oier-2szj/)** ，难度为 **困难**。
 
-Tag : 「数学」、「容斥原理」、「数位 DP」
+Tag : 「动态规划」、「数位 DP」、「容斥原理」
 
 
 
-给你一个整数 $n$ ，统计并返回各位数字都不同的数字 $x$ 的个数，其中 $0 <= x < 10^n$ 。
+给定正整数 $n$，返回在 $[1, n]$ 范围内具有 至少 1 位 重复数字的正整数的个数。
 
 示例 1：
 ```
-输入：n = 2
+输入：n = 20
 
-输出：91
+输出：1
 
-解释：答案应为除去 11、22、33、44、55、66、77、88、99 外，在 0 ≤ x < 100 范围内的所有数字。 
+解释：具有至少 1 位重复数字的正数（<= 20）只有 11 。
 ```
 示例 2：
 ```
-输入：n = 0
+输入：n = 100
 
-输出：1
+输出：10
+
+解释：具有至少 1 位重复数字的正数（<= 100）有 11，22，33，44，55，66，77，88，99 和 100 。
+```
+示例 3：
+```
+输入：n = 1000
+
+输出：262
 ```
 
 提示：
-* $0 <= n <= 8$
-
----
-
-### 乘法原理
-
-对于 $n = 0$ 的情况较为特殊，特判一下，返回 $1$。
-
-对于其他情况，由于不能含有前导 $0$，最高位可选择的数值个数为 $9$，而从次高位开始到最低位，可选的个数从 $9$ 开始逐一递减。
-
-利用乘法原理，每位数可选的数值个数相乘即是长度为 $n$ 的数的可能方案数 $cur$，而所有长度 $[1, n]$ 的方案数累加即是答案。
-
-代码：
-```Java
-class Solution {
-    public int countNumbersWithUniqueDigits(int n) {
-        if (n == 0) return 1;
-        int ans = 10;
-        for (int i = 2, last = 9; i <= n; i++) {
-            int cur = last * (10 - i + 1);
-            ans += cur; last = cur;
-        }
-        return ans;
-    }
-}
-```
-* 时间复杂度：$O(n)$
-* 空间复杂度：$O(1)$
+* $1 <= n <= 10^9$
 
 ---
 
 ### 数位 DP
 
-一种更为进阶的做法，应当是可以回答任意区间 $[l, r]$ 内合法数的个数。
+**首先 $[1, n]$ 共有 $n$ 个数，而求解 $[1, n]$ 范围内有多少个「至少有 $1$ 位重复数字」的数的个数，等价于「总数 $n$」减去「没有重复数的数的个数」。**
 
-这需要运用「数位 DP」进行求解，假定我们存在函数 `int dp(int x)` 函数，能够返回区间 $[0, x]$ 内合法数的个数，那么配合「容斥原理」我们便能够回答任意区间合法数的查询：
+于是问题转换为：**如何求解「没有重复数」的数的个数，同时为了更具一般性，我们将求解 $[1, n]$ 范围内「没有重复数」的数的个数，修改为求解 $[0, n]$ 范围内「没有重复数」的数的个数**。
+
+>即将问题转换为 [(题解) 357. 统计各位数字都不同的数字个数](https://leetcode-cn.com/problems/count-numbers-with-unique-digits/solution/by-ac_oier-6tfl/) 中的进阶部分。
+
+假定我们存在函数 `int dp(int x)` 函数，能够返回区间 $[0, x]$ 内合法数的个数，那么配合「容斥原理」我们便能够回答任意区间合法数的查询：
 
 $$
 ans_{(l, r)} = dp(r) - dp(l - 1)
@@ -127,19 +112,19 @@ class Solution {
         }
         return ans;
     }
-    public int countNumbersWithUniqueDigits(int n) {
-        return dp((int)Math.pow(10, n) - 1);
+    public int numDupDigitsAtMostN(int n) {
+        return (n + 1) - dp(n);
     }
 }
 ```
-* 时间复杂度：$O(n)$
-* 空间复杂度：$O(n)$
+* 时间复杂度：$O(\log{n})$
+* 空间复杂度：$O(1)$
 
 ---
 
 ### 最后
 
-这是我们「刷穿 LeetCode」系列文章的第 `No.357` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先把所有不带锁的题目刷完。
+这是我们「刷穿 LeetCode」系列文章的第 `No.1012` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先把所有不带锁的题目刷完。
 
 在这个系列文章里面，除了讲解解题思路以外，还会尽可能给出最为简洁的代码。如果涉及通解还会相应的代码模板。
 
