--- a/LeetCode/901-910/902. 最大为 N 的数字组合（困难）.md
+++ b/LeetCode/901-910/902. 最大为 N 的数字组合（困难）.md
@@ -129,6 +129,16 @@ class Solution {
 
 ---
 
+### 总结
+
+数位 DP 的难度取决于「限制条件」的多少，而 LC 上仅有的几道数位 DP 题目限制条件都很少，且不需要引入额外的数据结构来记录状态，因此都属于数位 DP 的入门难度（LC 难度均为 Hard）。
+
+几乎所有的数位 DP 问题都可以归纳到上述的解法 :「将问题抽象为求解一个 $[0, x]$ / $[1, x]$ 范围方案数的方法」->「对方案数统计根据 位数 来分情况讨论：数位相等的情况 + 数位不等情况」->「统计数位相等的方案数时，需要按位处理，并根据限制条件做逻辑；统计数位不等的方案数时，通常要做一些预处理，然后配合乘法原理直接算得」。
+
+在还没卷到数位 DP 烂大街的现在，掌握此类求解方式单一，普遍定位为「困难」的数位 DP 类型，还是极具性价比的。
+
+---
+
 ### 最后
 
 这是我们「刷穿 LeetCode」系列文章的第 `No.902` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先把所有不带锁的题目刷完。
