--- a/LeetCode/381-390/385. 迷你语法分析器（中等）.md
+++ b/LeetCode/381-390/385. 迷你语法分析器（中等）.md
@@ -35,8 +35,8 @@ Tag : 「栈」、「模拟」
 提示：
 * $1 <= s.length <= 5 * 10^4$
 * `s` 由数字、方括号 `"[]"`、负号 `'-'` 、逗号 `','`组成
-用例保证 s 是可解析的 NestedInteger
-输入中的所有值的范围是 [-106, 106]
+* 用例保证 `s` 是可解析的 `NestedInteger`
+* 输入中的所有值的范围是 $[-10^6, 10^6]$
 
 ---
 
