--- a/LeetCode/821-830/824. 山羊拉丁文（简单）.md
+++ b/LeetCode/821-830/824. 山羊拉丁文（简单）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[824. 山羊拉丁文]()** ，难度为 **简单**。
+这是 LeetCode 上的 **[824. 山羊拉丁文](https://leetcode-cn.com/problems/goat-latin/solution/by-ac_oier-t7hj/)** ，难度为 **简单**。
 
 Tag : 「模拟」
 
