--- a/LeetCode/581-590/587. 安装栅栏（困难）.md
+++ b/LeetCode/581-590/587. 安装栅栏（困难）.md
@@ -2,11 +2,13 @@
 
 这是 LeetCode 上的 **[587. 安装栅栏](https://leetcode-cn.com/problems/erect-the-fence/solution/by-ac_oier-4xuu/)** ，难度为 **困难**。
 
-Tag : 「计算几何」
+Tag : 「计算几何」、「凸包」
 
 
 
-在一个二维的花园中，有一些用 $(x, y)$ 坐标表示的树。由于安装费用十分昂贵，你的任务是先用最短的绳子围起所有的树。只有当所有的树都被绳子包围时，花园才能围好栅栏。你需要找到正好位于栅栏边界上的树的坐标。
+在一个二维的花园中，有一些用 $(x, y)$ 坐标表示的树。由于安装费用十分昂贵，你的任务是先用最短的绳子围起所有的树。只有当所有的树都被绳子包围时，花园才能围好栅栏。
+
+你需要找到正好位于栅栏边界上的树的坐标。
 
 示例 1:
 ![](https://assets.leetcode-cn.com/aliyun-lc-upload/uploads/2018/10/12/erect_the_fence_1.png)
@@ -50,7 +52,7 @@ Tag : 「计算几何」
     
 2. 使用栈来维护所有凸包上的点，或者说凸包上的边，会更为准确，凸包起点元素会在栈中出现两次（首尾），因此更为准确的描述应该是使用栈维护凸包的所有的边，栈中相邻元素代表凸包上的一条边；
 
-3. 分别「从前往后」和「从后往前」处理排序好的所有点，来分别画出凸包的上下两部分，根据画的是第一部分还是第二部分，维护栈内元的处理逻辑稍有不同：
+3. 分别「从前往后」和「从后往前」处理排序好的所有点，来分别画出凸包的两半部分，根据画的是第一部分还是第二部分，维护栈内元的处理逻辑稍有不同：
 
     **a. 画的是凸包的第一部分：**
     * 若栈内元素少于 $2$ 个，组成一条线至少需要两个点，说明此时第一条边都还没画出，直接将元素添加到栈中；
@@ -90,7 +92,7 @@ class Solution {
             int[] c = trees[i];
             while (tp >= 2) {
                 int[] a = trees[stk[tp - 1]], b = trees[stk[tp]];
-                if (getArea(a, b, c) < 0) vis[stk[tp--]] = false;
+                if (getArea(a, b, c) > 0) vis[stk[tp--]] = false;
                 else break;
             }
             stk[++tp] = i;
@@ -102,7 +104,7 @@ class Solution {
             int[] c = trees[i];
             while (tp > size) {
                 int[] a = trees[stk[tp - 1]], b = trees[stk[tp]];
-                if (getArea(a, b, c) < 0) tp--;
+                if (getArea(a, b, c) > 0) tp--;
                 // vis[stk[tp--]] = false; // 非必须
                 else break;
             }
@@ -125,7 +127,7 @@ class Solution {
 由于我太久没写计算几何了，翻了一下以前在其他 OJ 提交的题，找回自己几年前的板子，好奇心驱使，想看看现在是否有板子上的突破（通常很难，尤其对于计算几何而言），结果发现网上绝大多数板子都存在严重逻辑错误：
 
 1. 最为严重的错误是，处理凸包第一部分和第二部分，都是使用「栈顶元素不少于 $2$ 个」的逻辑：即使存在 $vis$ 数组也无法避免该逻辑错误，在某些数据上，该逻辑**会导致最右边的一些点无法被围住**；
-2. 存在对 `vis` 数组的错误理解：`vis` 的作用仅是为了处理凸包第二部分的时候，不要使用到凸包第一部分的点而已。**含义并非是处理过的点，或者当前凸包上的点**，因此你可以看到我代码注释中写了「不标记起点」和「非必须」，在画第二部分的凸包时，只需要确保第一部分使用的点不参与即可，**重点问题本身就由遍历所保证，而并非 $vis$ 数组**。当然，为了记忆方便，让模板更具有“对称性”，也可以保留在画第二部分凸包的时候，保留对 $vis$ 的维护逻辑，但千万不要搞错了 $vis$ 的含义。
+2. 存在对 `vis` 数组的错误理解：`vis` 的作用仅是为了处理凸包第二部分的时候，不要使用到凸包第一部分的点而已。**含义并非是处理过的点，或者当前凸包上的点**，因此你可以看到我代码注释中写了「不标记起点」和「非必须」，在画第二部分的凸包时，只需要确保第一部分使用的点不参与即可，**重复点问题本身就由遍历所保证，而并非 $vis$ 数组**。当然，为了记忆方便，让模板更具有“对称性”，也可以保留在画第二部分凸包的时候，保留对 $vis$ 的维护逻辑，但千万不要搞错了 $vis$ 的含义。
 
 ---
 
