--- a/Index/蓄水池抽样.md
+++ b/Index/蓄水池抽样.md
@@ -1,4 +1,5 @@
 | 题目                                                         | 题解                                                         | 难度 | 推荐指数 |
 | ------------------------------------------------------------ | ------------------------------------------------------------ | ---- | -------- |
 | [382. 链表随机节点](https://leetcode-cn.com/problems/linked-list-random-node/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/linked-list-random-node/solution/gong-shui-san-xie-xu-shui-chi-chou-yang-1lp9d/) | 中等 | 🤩🤩🤩🤩🤩    |
+| [398. 随机数索引](https://leetcode-cn.com/problems/random-pick-index/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/random-pick-index/solution/by-ac_oier-zhml/) | 中等 | 🤩🤩🤩🤩🤩    |
 
