--- a/LeetCode/411-420/417. 太平洋大西洋水流问题（中等）.md
+++ b/LeetCode/411-420/417. 太平洋大西洋水流问题（中等）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[417. 太平洋大西洋水流问题](https://leetcode-cn.com/problems/pacific-atlantic-water-flow/solution/by-ac_oier-do7d/)** ，难度为 **中等**。
 
-Tag : 「DFS」、「BFS」、「多源 BFS」
+Tag : 「DFS」、「BFS」、「多源 BFS」、「并查集」
 
 
 
