--- a/LeetCode/611-620/611. 有效三角形的个数（中等）.md
+++ b/LeetCode/611-620/611. 有效三角形的个数（中等）.md
@@ -21,8 +21,8 @@ Tag : 「排序」、「二分」、「双指针」
 2,2,3
 ```
 注意:
-1. 数组长度不超过1000。
-2. 数组里整数的范围为 [0, 1000]。
+1. 数组长度不超过 $1000$。
+2. 数组里整数的范围为 $[0, 1000]$。
 
 ---
 
