--- a/LeetCode/901-910/905. 按奇偶排序数组（简单）.md
+++ b/LeetCode/901-910/905. 按奇偶排序数组（简单）.md
@@ -33,7 +33,7 @@ Tag : 「模拟」、「双指针」
 
 ### 模拟
 
-根据题意进行模拟即可：使用指针 $i$ 和 $j$ 分别代表未处理区间的左右端点，当 $nums[i]$ 不为偶数时，将 $i$ 和 $j$ 两个位置互换，原有位置 $j$ 边是奇数（已处理好），让 $j$ 自减左移，但原有位置 $i$ 交换后不确保是偶数，需要再次检查。
+根据题意进行模拟即可：使用指针 $i$ 和 $j$ 分别代表未处理区间的左右端点，当 $nums[i]$ 不为偶数时，将 $i$ 和 $j$ 两个位置互换，原有位置 $j$ 必然是奇数（已处理好），让 $j$ 自减左移，但原有位置 $i$ 交换后不确保是偶数，需要再次检查。
 
 代码：
 ```Java
