--- a/LeetCode/381-390/390. 消除游戏（中等）.md
+++ b/LeetCode/381-390/390. 消除游戏（中等）.md
@@ -6,7 +6,6 @@ Tag : 「动态规划」、「数学」、「约瑟夫环」
 
 
 
-
 列表 `arr` 由在范围 `[1, n]` 中的所有整数组成，并按严格递增排序。
 
 请你对 `arr` 应用下述算法：
@@ -45,7 +44,7 @@ arr = [6]
 
 与求解约瑟夫环类似，本题也可以通常找规律，分析出公式之后进行递推求解。
 
-对于本题，定义 $f[i]$ 为在 **连续序列** $[1, i]$ 中进行「起始从左到右」的轮流换向间隔删除，最终左边剩余的编号；定义 $f'[i]$ 为在 **连续序列** $[1, i]$ 中进行「起始从右到左」的轮流换向间隔删除，最终右边剩余的编号。
+对于本题，定义 $f[i]$ 为在 **连续序列** $[1, i]$ 中进行「起始先从左到右，再从右往左」的轮流换向间隔删除，最终左边剩余的编号；定义 $f'[i]$ 为在 **连续序列** $[1, i]$ 中进行「起始先从右到左，再从左往右」的轮流换向间隔删除，最终右边剩余的编号。
 
 **由于「从左往右」和「从右往左」分别为「从左端点发起，间隔删除」和「从右端点发起，间隔删除」，因此整个删除过程在连续序列中 $[1, i]$ 中具有对称性，两者最终剩余的编号在连续序列中也具有对称性。**
 
